tests/sources/invalid/classes/super_call_base_no_ctor.fire
// Semantic error: 'this.super(...)' where the base class has no declared
// constructor.

class Base {
    x: int32;
}

class Derived from Base {
    y: int32;

    fn Derived(y: int32) {
        this.super();  //~ ERROR FS-SEM-0010 @14
        this.y = y;
    }
}
